--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="static/index.js"></script> 
         <title>市占道停车收费员上&nbsp;岗&nbsp;证</title>
     </head>
-    <body class="ui-mobile-viewport ui-overlay-c" id="main">
+    <body class="ui-mobile-viewport ui-overlay-c">
         <div data-role="page" class="type-interior ui-page ui-body-c ui-page-active" tabindex="0" style="min-height: 818px;"> 
             <div data-role="header" data-theme="b" class="ui-header ui-bar-b" role="banner">
                 <h1 class="ui-title" role="heading" aria-level="1">市占道停车收费员<br>上&nbsp;岗&nbsp;证</h1> 
@@ -18,7 +18,7 @@
                 <ul id="infoul" data-role="listview" data-split-icon="gear" data-split-theme="d" class="ui-listview">  
 
 
-                    <li class="ui-li ui-li-static ui-btn-up-c ui-li-has-thumb ui-li-last">
+                    <li class="ui-li ui-li-static ui-btn-up-c ui-li-has-thumb ui-li-last" id="main">
                         <img id="99a35b31-7eac-4745-87f1-a6e8dbb1a018" class="ui-li-thumb" src="./static/AppshowUserImage.action.下载">
                         <strong>姓名：</strong>{{name}}<hr>
                         <strong>编号：</strong>{{no}}<br><hr>
