--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <strong>姓名：</strong>{{name}}<hr>
                         <strong>编号：</strong>{{no}}<br><hr>
                         <strong>有效开始时间：</strong>{{start}}<br><hr>
-                        <strong>有效结束时间：</strong>{{edn}}<br><hr>
+                        <strong>有效结束时间：</strong>{{end}}<br><hr>
                         <strong>企业监督电话：</strong>67311616<br><hr>
                         <strong>企业名称：</strong>{{com}}<br><hr>
                         <!--	<strong>区县：</strong>朝阳区<br/><hr/>  -->
