--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <title>市占道停车收费员上&nbsp;岗&nbsp;证</title>
     </head>
-    <body class="ui-mobile-viewport ui-overlay-c">
+    <body class="ui-mobile-viewport ui-overlay-c" style="background: #f0f0f0;">
         <div data-role="page" class="type-interior ui-page ui-body-c ui-page-active" tabindex="0"> 
             <div data-role="header" data-theme="b" class="ui-header ui-bar-b" role="banner">
                 <h1 class="ui-title" role="heading" aria-level="1">市占道停车收费员<br>上&nbsp;岗&nbsp;证</h1> 
