--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
                     <li class="ui-li ui-li-static ui-btn-up-c ui-li-has-thumb ui-li-last" id="main">
-                        <img id="99a35b31-7eac-4745-87f1-a6e8dbb1a018" class="ui-li-thumb" src="./static/AppshowUserImage.action.下载">
+                        <img id="99a35b31-7eac-4745-87f1-a6e8dbb1a018" class="ui-li-thumb" v-bind:src="{{avatar}}">
                         <strong>姓名：</strong>{{name}}<hr>
                         <strong>编号：</strong>{{no}}<br><hr>
                         <strong>有效开始时间：</strong>{{start}}<br><hr>
